syntax = "proto3";
package l2ms;
import "common.proto";

message LoginRequest
{
  string account = 1;
  string password = 2;
}

message LoginResponse
{
	ClientError error = 1;
}